Add initial vecs class and unit tests

--- a/utests/CMakeLists.txt
+++ b/utests/CMakeLists.txt
@@ -19,7 +19,7 @@ include(Catch)
 # 
 set(UTESTS 
   utest_Success
-  utest_Failure)
+  utest_vec)
 
 # 
 # For each of the executables named in ${UTESTS}, compile them into a
